--- a/.delivery/build_cookbook/.kitchen.yml
+++ b/.delivery/build_cookbook/.kitchen.yml
@@ -8,7 +8,6 @@ provisioner:
   name: chef_zero
   encrypted_data_bag_secret_key_path: 'secrets/fakey-mcfakerton'
   data_bags_path: './data_bags'
-  product_name: chefdk
 
 platforms:
   - name: ubuntu-22.10
@@ -17,5 +16,6 @@ platforms:
 suites:
   - name: default
     run_list:
+      - recipe[delivery_build::default]
       - recipe[test]
     attributes:
