--- a/.delivery/project.toml
+++ b/.delivery/project.toml
@@ -12,25 +12,13 @@
 # config.json file and it will continue working as usual.
 
 [local_phases]
-unit = "chef exec rspec spec/"
-lint = "chef exec cookstyle"
-# Foodcritic includes rules only appropriate for community cookbooks
-# uploaded to Supermarket. We turn off any rules tagged "supermarket"
-# by default. If you plan to share this cookbook you should remove
-# '-t ~supermarket' below to enable supermarket rules.
-syntax = "chef exec foodcritic . --exclude spec -f any -t ~supermarket"
+unit = "rspec spec/"
+lint = "cookstyle"
+# Foodcritic expects an `issues_url` and `source_url` in the metadata.rb
+# We turn this off by default because only cookbooks uploaded to the
+# Supermarket will have these added.
+syntax = "foodcritic . --exclude spec -f any -t \"~FC064\" -t \"~FC065\""
 provision = "chef exec kitchen create"
 deploy = "chef exec kitchen converge"
 smoke = "chef exec kitchen verify"
-# The functional phase is optional, you can define it by uncommenting
-# the line below and running the command: `delivery local functional`
-# functional = ""
 cleanup = "chef exec kitchen destroy"
-
-# Remote project.toml file
-#
-# Specify a remote URI location for the `project.toml` file.
-# This is useful for teams that wish to centrally manage the behavior
-# of the `delivery local` command across many different projects.
-#
-# remote_file = "https://url/project.toml"
