--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -4,10 +4,6 @@ driver:
 
 provisioner:
   name: chef_zero
-  # You may wish to disable always updating cookbooks in CI or other testing environments.
-  # For example:
-  #   always_update_cookbooks: <%= !ENV['CI'] %>
-  always_update_cookbooks: true
 
 verifier:
   name: inspec
@@ -19,8 +15,8 @@ platforms:
 suites:
   - name: default
     run_list:
-      - recipe[docker::default]
+      - recipe[nginx::default]
     verifier:
       inspec_tests:
-        - test/smoke/default
+        - test/recipes
     attributes:
